# internal/server/pikvm_automator_server.go
@@ -33,15 +33,10 @@ func (s *PiKvmAutomatorServer) CallCommand(_ context.Context, req *gen.CallComma
 
 	return &gen.CallCommandResponse{}, nil
 }
-func (s *PiKvmAutomatorServer) ManualCall(context.Context, *gen.ManualCallRequest) (*gen.ManualCallResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method ManualCall not implemented")
-}
+
 func (s *PiKvmAutomatorServer) DeleteCommand(context.Context, *gen.DeleteCommandRequest) (*gen.DeleteCommandResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeleteCommand not implemented")
 }
 func (s *PiKvmAutomatorServer) CreateCommand(context.Context, *gen.CreateCommandRequest) (*gen.CreateCommandResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateCommand not implemented")
-}
-func (s *PiKvmAutomatorServer) UpdateCommand(context.Context, *gen.UpdateCommandRequest) (*gen.UpdateCommandResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method UpdateCommand not implemented")
 }
